# MagangBayu24-ROS2

./: README.md
tugas_1/: README.md  package.xml  setup.cfg  setup.py
tugas_1/tugas_1/: publisher_member_function.py  subscriber_member_function.py
tugas_2/: README.md  package.xml  setup.cfg  setup.py
tugas_2/tugas_2/: publisher_member_function.py  subscriber_member_function.py
tugas_3/: README.md  package.xml  setup.cfg  setup.py
tugas_3/tugas_3/: publisher_member_function.py
